# log-scout

./: Cargo.toml  LICENSE  README.md  app.json
src/: app.rs  config.rs  main.rs  pattern_builder.rs
