[package]
name = "log_scout"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
anyhow = "1.0"
regex = "1"
linemux = "0.3"
tokio = { version = "1", features = ["full", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify-rust = "4"
walkdir = "2"